# beipack

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
src/bei/: beiboot.py  beipack.py  beipack.py.template  boot.py  bootloader.py  pack.py  spawn.py  tmpfs.py
src/bei/data/: __init__.py  beipack.py.template  beipack_loader.py
test/: test_beipack.py
test/files/: hello.py
